Bug 791711 - Invalidate again if the SharedImageID was removed. r=nical